kubernetet_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stun-server
spec:
  selector:
    matchLabels:
      app: stun-server
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: stun-server
        track: stable
    spec:
      containers:
        - name: stun-server
          image: sigmundgranaas/stun-server
          imagePullPolicy: Always
          ports:
            - containerPort: 3478
