kubernetes_service.yml
apiVersion: v1
kind: Service
metadata:
  name: stun-server
spec:
  selector:
    app: stun-server
  ports:
    - port: 3478
      protocol: TCP
      targetPort: 3478
