kubernetes_ingress.yml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: webrtc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /webrtc/
            pathType: ImplementationSpecific
            backend:
              serviceName: frontend
              servicePort: 80
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              serviceName: signalserver
              servicePort: 8000
